feat: 可以执行单测的目录结构组织

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,15 @@
 ﻿# CMakeList.txt: cwheel 的 CMake 项目，在此处包括源代码并定义
 # 项目特定的逻辑。
 #
-cmake_minimum_required (VERSION 3.8)
+cmake_minimum_required (VERSION 3.14)
 
 project ("cwheel")
+set(CMAKE_CXX_STANDARD 17)
+
+add_subdirectory("src")
 
 # 将源代码添加到此项目的可执行文件。
 add_executable (cwheel "cwheel.cpp" "cwheel.h")
 
-# TODO: 如有需要，请添加测试并安装目标。
+# 单测
+add_subdirectory("test")
