--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,23 @@
 project ("cwheel_lib")
 
+
+# 引入fmtlib
+include(FetchContent)
+FetchContent_Declare(
+  fmtlib
+  URL https://github.com/fmtlib/fmt/archive/refs/tags/8.1.1.zip
+)
+FetchContent_MakeAvailable(fmtlib)
+
+
 add_library (cwheel_lib STATIC
 "hello.h" "hello.cc"    
 "delegate.h"
+)
+
+target_link_libraries(
+  cwheel_lib
+  fmt
 )
 
 target_include_directories(cwheel_lib
