--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,14 +1,4 @@
-cmake_minimum_required (VERSION 3.14)
-
-# 引入gtest https://google.github.io/googletest/quickstart-cmake.html
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/refs/tags/release-1.11.0.zip
-)
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
+find_package(GTest CONFIG REQUIRED)
 
 enable_testing()
 
@@ -18,10 +8,16 @@ add_executable(
   cwheel_test
   ${test_files}
 )
-target_link_libraries(
-  cwheel_test
+
+target_compile_features(cwheel_test PRIVATE cxx_std_17)
+
+target_link_libraries(cwheel_test
+PRIVATE
   cwheel_lib
-  gtest_main
+  GTest::gmock 
+  GTest::gtest 
+  GTest::gmock_main 
+  GTest::gtest_main
 )
 
 include(GoogleTest)
