--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -19,7 +19,8 @@ jobs:
           curl -fsSL https://xmake.io/shget.text | bash
       - name: Run Tests
         run: |
-          xmake build -w cwheel_test -m debug 
+          xmake f -p linux -a x64 -m debug 
+          xmake build -w cwheel_test 
           cd build/linux/x86_64/debug
           ./cwheel_test
           
