--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -2,7 +2,7 @@ name: Test Coverage Github Actions
 on:
   push:
     branches:
-      - tmp_test_coverage
+      - master
   pull_request:
     branches:
       - master
@@ -21,15 +21,13 @@ jobs:
         run: |
           xmake f -p linux -a x64 -m debug -y
           xmake build -w cwheel_test
-          cd build/linux/x64/debug
+          cp build/linux/x64/debug/cwheel_test ./
           ./cwheel_test
-          pwd
           
       - name: Upstream to codecov
         env:
           token: ${{ secrets.CODECOV_TOKEN }}
         run: |
-          pwd
           curl -S -f https://codecov.io/bash -o codecov
           chmod +x codecov
           ./codecov -x "llvm-cov gcov" -Z -t ${token}
