--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -7,7 +7,7 @@ on:
     branches:
       - master
 jobs:
-  test-and-upstream:
+  test-and-upstream-gcc:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
