--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -7,26 +7,25 @@ on:
     branches:
       - master
 jobs:
-  test-and-upstream-gcc:
+  test-and-upstream-clang:
+    strategy:
+      matrix:
+        clang_version: [16]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
         with:
           fetch-depth: 2
-      - name: Set up GCC
-        uses: egor-tensin/setup-gcc@v1
-        with:
-          version: latest
-          platform: x64
       - name: Prepare Env
         run: |
-          sudo apt-get install llvm clang lcov
+          sudo apt-get install -y llvm-${{matrix.clang_version}}
+          sudo apt-get install -y lcov
           curl -fsSL https://xmake.io/shget.text | bash
       - name: Run Tests
         run: |
-          xmake f -p linux -a x64 -m coverage --test=y -y
+          xmake f -p linux -a x64 -m coverage --test=y -y --toolchain=clang
           xmake build -w cwheel_test
-          xmake run cwheel_test 
+          xmake run cwheel_test
           lcov --directory . --capture --output-file coverage.info
           lcov --remove coverage.info '/usr/*' "${HOME}"'/.cache/*' --output-file coverage.info
           lcov -e coverage.info '*cwheel/*' --output-file coverage.info
