--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -19,20 +19,20 @@ jobs:
       - name: Prepare Env
         run: |
           sudo apt install -y gcc-${{matrix.gcc_version}} g++-${{matrix.gcc_version}}
-          sudo apt-get install -y gcov-${{matrix.gcc_version}}
+          # sudo apt-get install -y gcov-${{matrix.gcc_version}}
           curl -fsSL https://xmake.io/shget.text | bash
       - name: Run Tests
         run: |
           xmake f -p linux -a x64 -m coverage --test=y -y --toolchain=gcc-${{matrix.gcc_version}}
           xmake build -w cwheel_test
           xmake run cwheel_test
-          gcov-${{matrix.gcc_version}} --directory . --capture --output-file coverage.info
-          gcov-${{matrix.gcc_version}} --remove coverage.info '/usr/*' "${HOME}"'/.cache/*' --output-file coverage.info
-          gcov-${{matrix.gcc_version}} -e coverage.info '*cwheel/*' --output-file coverage.info
-          gcov-${{matrix.gcc_version}} --list coverage.info
-      - uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }} 
-          files: ./coverage.info
-          flags: unittests
-          fail_ci_if_error: true 
+          # gcov-${{matrix.gcc_version}} --directory . --capture --output-file coverage.info
+          # gcov-${{matrix.gcc_version}} --remove coverage.info '/usr/*' "${HOME}"'/.cache/*' --output-file coverage.info
+          # gcov-${{matrix.gcc_version}} -e coverage.info '*cwheel/*' --output-file coverage.info
+          # gcov-${{matrix.gcc_version}} --list coverage.info
+      # - uses: codecov/codecov-action@v3
+      #   with:
+      #     token: ${{ secrets.CODECOV_TOKEN }} 
+      #     files: ./coverage.info
+      #     flags: unittests
+      #     fail_ci_if_error: true 
